	  again!  This is a quick cleanup to Ted's new directories.  Looks
	  like "patterns" got left out.
	* share/clipart/.cvsignore, share/templates/.cvsignore,
	  share/examples/.cvsignore, share/fonts/.cvsignore,
	  share/gradients/.cvsignore, share/keyboards/.cvsignore,
	  share/palettes/.cvsignore, share/patterns/.cvsignore:
	  Added Makefile build-cruft to .cvsignores.

2004-04-13  Ted Gould <ted@gould.cx>

	* configure.in, share/Makefile.am, share/clipart/Makefile.am,
      share/examples/Makefile.am, share/fonts/Makefile.am
      share/gradients/Makefile.am, share/keyboards/Makefile.am
      share/markers/Makefile.am, share/palettes/Makefile.am
      share/screens/Makefile.am, share/templates/Makefile.am:
	Making it so that the clipart and everything else gets put in
	the tarball, and also get installed in the share directory.  Many
	of these have just 'README' files, but they now have good place-
	holders for further development.

2004-04-12  Kees Cook <kees@outflux.net>

	* src/dialogs/stroke-style.cpp, src/Makefile.am, src/dialogs/Makefile.am,
	  src/widgets/Makefile.am, configure.in: fixed up INKSCAPE_*DIR paths so CVS
      will compile happily for me.  This way if paths change, files will be
	  recompiled.  The old way would let configure run again (changing the
	  datadir path) without forcing a recompile, which could break the
	  compiled paths.

2004-04-13  John Cliff	<simarilius@yahoo.com>
	* src/sp-shape.cpp, src/dialogs/stroke-style.cpp:
	Couple of changes to marker related code, mid and end markers now point in correct 
	direction, turning off start markers behaves correctly.
	This follows on from changes made by me and Carl Hetherington that were commited 
	yesterday to 
	src/inkscape-stock.cpp, src/sp-item.cpp, src/sp-marker.cpp, src/sp-shape.cpp,
	src/style.cpp, src/style.h, src/dialogs/stroke-style.cpp 
	to implement marker UI and fixes to the marker rendering code.

2004-04-11  Ted Gould <ted@gould.cx>
