@@ -9,6 +9,8 @@
 	  share/gradients/.cvsignore, share/keyboards/.cvsignore,
 	  share/palettes/.cvsignore, share/patterns/.cvsignore:
 	  Added Makefile build-cruft to .cvsignores.
+	* src/helper/unit-menu.cpp: applied patch 934358 from cth103 to fix
+	  grid unit changing bug.
 
 2004-04-13  Ted Gould <ted@gould.cx>
 
